--- a/routers/views/Login.html
+++ b/routers/views/Login.html
@@ -9,7 +9,7 @@
 
     <form method="post">
       <label>ID</label><input type="text" name="id"><br>
-      <label>PW</label><input type="text" name="pw">
+      <label>PW</label><input type="password" name="pw">
       <input type="submit" value="LOGIN">
     </form>
 
