--- a/routers/views/posts.ejs
+++ b/routers/views/posts.ejs
@@ -3,9 +3,6 @@
   <head>
     <meta>
     <title></title>
-    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin="anonymous"></script>
-
     <style>
       .posts{
         margin:1px;
@@ -15,9 +12,11 @@
     </style>
   </head>
   <body>
-    <div class="target">
-
+    <div class="top">
+      <button type="button" class="logout">로그아웃</button>
     </div>
+
+    <div class="target"></div>
 
     <div class="create">
       <button type="button" class="write">글쓰기</button>
@@ -25,20 +24,23 @@
   </body>
 </html>
 
+<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin="anonymous"></script>
+
 <script>
   //게시글 리스트 뿌려주기
   var resultList = <%- result %>
   for(var i=0; i<resultList.length; i++){
-    $('.target').append('<div class="posts">제목 : <a href="/detail/' + resultList[i].no + '">' + resultList[i].title + '</a><br>작성자 :' + resultList[i].id + '</div>');
+    $('.target').append('<div class="posts">제목 : <a href="posts/detail/' + resultList[i].no + '">' + resultList[i].title + '</a><br>작성자 :' + resultList[i].id + '</div>');
   }
-
-  //선택한 게시글 페이지로 이동
-  $('.posts').click(function(){
-
-  })
 
   //게시글 작성 페이지로 이동
   $('.write').click(function(){
     location.href = "posts/create";
+  })
+
+  //로그아웃(쿠키삭제)
+  $('.logout').click(function(){
+    location.href = "posts/logout";
   })
 </script>
