--- a/routers/views/detail.ejs
+++ b/routers/views/detail.ejs
@@ -19,13 +19,21 @@
     <div class="target">
 
     </div>
+
+    <div class="bottom">
+      <button type="button" class="del">삭제</button>
+    </div>
   </body>
 </html>
 
 <script>
   var data = <%- result %>
-
+  var no = <%- no %>
   $(document).ready(function(){
     $('.target').append('<div class="section"><label>작성자  </label>'+ data.id +'</div><div class="section"><label>제목  </label>'+ data.title +'</div><div class="section"><label>내용  </label>'+ data.body +'</div><div class="section"><label>작성시간  </label>'+ data.time +'</div>');
+  })
+
+  $('.del').click(function(){
+    location.href = no + '/delete';
   })
 </script>
