--- a/routers/views/Main.html
+++ b/routers/views/Main.html
@@ -7,5 +7,6 @@
   <body>
     <h1>Main Page</h1>
     <h3><a href="/board/Login">Login</a></h3>
+    <h3> <a href="/board/signup">Signup</a> </h3>
   </body>
 </html>
