--- a/routers/views/search.ejs
+++ b/routers/views/search.ejs
@@ -14,7 +14,7 @@
   <body>
     <div class="top">
       <button type="button" class="logout">로그아웃</button>
-      <form action="posts/search" method="post">
+      <form action="/board/posts/search" method="post">
         <input type="text" name="search">
         <input type="submit" value="검색">
       </form>
