--- a/routers/views/create.ejs
+++ b/routers/views/create.ejs
@@ -2,13 +2,42 @@
 <html>
   <head>
     <meta>
-    <title></title>
+    <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="/css/base.css">
+
+    <style media="screen">
+      .in{
+        position:absolute;
+        top:25%; left:10%;
+      }
+    </style>
   </head>
   <body>
-    <form method="post">
-      <label>제목</label><input type="text" name="title"><br><br>
-      <label>본문</label><textarea name="body" rows="8" cols="80"></textarea><br><br>
-      <input type="submit" value="작성">
-    </form>
+    <div class="header">
+      <a href="/board/posts"><h1>MS Blog</h1></a>
+    </div>
+    <div class="content">
+      <div class="in">
+        <form class="form-horizontal" method="post">
+          <div class="form-group">
+            <label class="col-sm-2 control-label">TITLE</label>
+            <div class="col-sm-10">
+              <input type="email" class="form-control" id="inputEmail3" placeholder="TITLE" name="title">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label">BODY</label>
+            <div class="col-sm-10">
+              <textarea name="body" class="form-control" rows="15" cols="100" placeholder="BODY"></textarea><br><br>
+              <input type="submit" class="btn btn-default" value="WRITE">
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
