--- a/routers/views/update.ejs
+++ b/routers/views/update.ejs
@@ -23,7 +23,7 @@
     </div>
     <div class="content">
       <div class="in">
-        <form class="form-horizontal" method="post">
+        <form class="form-horizontal" method="post" enctype="multipart/form-data">
           <div class="form-group">
             <label class="col-sm-2 control-label">TITLE</label>
             <div class="col-sm-10">
@@ -34,6 +34,7 @@
             <label class="col-sm-2 control-label">CONTENT</label>
             <div class="col-sm-10">
               <textarea name="content" class="form-control" id="content" rows="15" cols="100" placeholder="CONTENT"></textarea><br><br>
+              <input type="file" name="uploadFile"><br><br>
               <input type="submit" class="btn btn-default" value="WRITE">
             </div>
           </div>
