삭제기능 수정

--- a/routers/views/detail.ejs
+++ b/routers/views/detail.ejs
@@ -63,6 +63,8 @@
         </tr>
       </table>
     </div>
+
+    <input type="button" class="test" value="파일삭제 테스트">
   </body>
 </html>
 
@@ -93,5 +95,9 @@
 
   $('.update').click(function(){
     location.href = no + '/update';
+  })
+
+  $('.test').click(function(){
+    location.href = no + '/fileDel';
   })
 </script>
